# lastversion-backend

./: Dockerfile  certificat.pem  db.sqlite3  pyproject.toml  skanderlahbaiel  skanderlahbaiel.pub  tâches.txt
app/: admin.py  apps.py  manage.py  models.py  signals.py  urls.py  views.py
app/migrations/: 0001_initial.py
docs/: Makefile  app.rst  conf.py  generate_documentation.rst  make.bat  modules.rst
docs/_build/doctrees/: app.doctree  app.migrations.doctree  environment.pickle  generate_documentation.doctree  index.doctree  mapping.doctree  modules.doctree
docs/_build/html/: .buildinfo  app.html  app.migrations.html  generate_documentation.html  genindex.html  index.html  mapping.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/app/: apps.html  manage.html
docs/_build/html/_modules/app/migrations/: 0001_initial.html
docs/_build/html/_sources/: index.rst.txt  mapping.rst.txt
docs/_build/latex/: mscharacdocumentation.aux  mscharacdocumentation.fdb_latexmk  mscharacdocumentation.fls  mscharacdocumentation.idx  mscharacdocumentation.ilg  mscharacdocumentation.ind  mscharacdocumentation.out  mscharacdocumentation.tex  mscharacdocumentation.toc
generate_documentation/: adjust_paths_rst.py  generate_doc.sh  modify_conf.py
khadija_documentation.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
mapping/: asgi.py  settings.py  urls.py  wsgi.py
